[tool.poetry]
name = "data-mining-program-1"
version = "0.1.0"
description = ""
authors = ["MarioShontz <shontzm@gmail.com>"]
readme = "README.md"
packages = [{include = "data_mining_program_1"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
